--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <style>
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
+    font-size: 11px;
     color: #333;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -96,7 +96,7 @@
     height: 40px;
     width: 200px;
     margin: 0 8px 16px;
-    padding: 16px;
+    padding: 16px 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
